# sumbody

./: .gitignore  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
.github/workflows/: build-windows.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: call_logs.rs  db.rs  members.rs  mod.rs
src-tauri/src/db/: init.rs  queries.rs
src/components/: AddMemberDialog.tsx  BirthdayTray.tsx  CallHistoryPanel.tsx  Dashboard.tsx  DateRangeFilter.tsx  DbPathDisplay.tsx  DeleteConfirmDialog.tsx  EditableCell.tsx  EmailAllButton.tsx  ExportButton.tsx  FilterInput.tsx  FilterPanel.tsx  ImportDropZone.tsx  ImportProgress.tsx  LogCallDialog.tsx  MemberTable.tsx  MultiSelectFilter.tsx  SearchBar.tsx  WhatsAppDialog.tsx
src/components/ui/: dialog.tsx  toast.tsx
src/hooks/: useCallLogs.ts  useFilters.ts  useFuzzySearch.ts  useImport.ts  useMembers.ts
src/lib/: csv.ts  file-parser.ts  fuse-config.ts  schema.ts  tauri-commands.ts  utils.ts
src/types/: member.ts
