[package]
name = "sumbody"
version = "0.5.0"
description = "SumBody Members Management App"
authors = ["you"]
edition = "2021"

[lib]
name = "sumbody_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2"
